0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_raman_from_labspec.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_raman_from_labspec.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_raman_from_labspec.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_raman_from_labspec.py:


Loading RAMAN experimental file
===============================

Here we load experimental LABSPEC spectra and plot them.

.. GENERATED FROM PYTHON SOURCE LINES 11-13

.. code-block:: Python

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 14-15

Define the folder where are the spectra:

.. GENERATED FROM PYTHON SOURCE LINES 15-18

.. code-block:: Python

    datadir = scp.preferences.datadir
    ramandir = datadir / "ramandata/labspec"








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Read some data:

.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: Python

    A = scp.read_labspec("Activation.txt", directory=ramandir)
    A






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [float64] unitless (shape: (y:532, x:1024))[Activation]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> Activation</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@fv-az1333-830</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-04 17:01:04+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Spectrum acquisition : 2016-05-01 11:22:14</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-04 17:01:04+00:00> Imported from LabSpec6 text file<br/>               /home/runner/.spectrochempy/testdata/ramandata/labspec/Activation.txt</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> Counts</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[3.277e+05 3.278e+05 ... 7.594e+05 7.607e+05]<br/>          [3.239e+05 3.252e+05 ... 7.513e+05 7.501e+05]<br/>          ...<br/>          [5.711e+04 5.69e+04 ... 9.721e+04 9.697e+04]<br/>          [    3831     3826 ...     6476     6385]]</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:532, x:1024)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 1024</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> Raman shift</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[   198.2    199.8 ...     1692     1693] cm⁻¹</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 532</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> Time</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       0    308.4 ... 1.689e+05 1.692e+05] s</div></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> <div class='label'>[  2016-05-01 11:22:14   2016-05-01 11:27:14 ...   2016-05-03 07:32:14   2016-05-03 07:37:14]</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 24-25

Now plot them:

.. GENERATED FROM PYTHON SOURCE LINES 25-26

.. code-block:: Python

    A.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_001.png
   :alt: plot read raman from labspec
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_001.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 27-28

As it is a 2D dataset, we can plot it as an image:

.. GENERATED FROM PYTHON SOURCE LINES 28-29

.. code-block:: Python

    A.plot_image()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_002.png
   :alt: plot read raman from labspec
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_002.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 30-31

or a contour plot:

.. GENERATED FROM PYTHON SOURCE LINES 31-32

.. code-block:: Python

    A.plot_map()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_003.png
   :alt: plot read raman from labspec
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_003.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 33-34

We can also read the content of a folder, and merge all spectra:

.. GENERATED FROM PYTHON SOURCE LINES 34-37

.. code-block:: Python

    B = scp.read_labspec(ramandir / "subdir")
    B.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_004.png
   :alt: plot read raman from labspec
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_004.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 38-40

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 40-42

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 5.964 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_raman_from_labspec.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_raman_from_labspec.ipynb <plot_read_raman_from_labspec.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_raman_from_labspec.py <plot_read_raman_from_labspec.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_read_raman_from_labspec.zip <plot_read_raman_from_labspec.zip>`
